Closed Bug 1878109 Opened 1 year ago Closed 26 days ago

Failing WPT css/css-flexbox/align-content-wrap-003.html

Categories

(Core :: Layout: Flexbox, defect)

defect

Tracking

()

RESOLVED FIXED
136 Branch
Tracking Status
firefox136 --- fixed

People

(Reporter: twisniewski, Assigned: TYLin)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Blocks: 1878116
Blocks: 1878117
No longer blocks: 1878117
No longer blocks: 1878116
Severity: -- → S3
Component: Layout → Layout: Flexbox

Similar to Bug 1836206, in flex container, we should also use safe in the fallback for these align-content values: space-between, space-around, and space-evenly.

The code is at https://searchfox.org/mozilla-central/rev/3076c9156ef84aae253ffdc1d391e0bfab2c406b/layout/generic/nsFlexContainerFrame.cpp#3670-3693

See Also: → 1836206

Similar to Bug 1836206 and per the CSS Align spec, 'space-between',
'space-around', and 'space-evenly' should use a "safe" fallback alignment when
overflow occurs.

This patch sets alignContentFlags to StyleAlignFlags::SAFE to fix the
fallback, and moves overflow-handling code to a later point so that it can catch
overflow more broadly.

Assignee: nobody → aethanyc
Status: NEW → ASSIGNED
Pushed by aethanyc@gmail.com: https://hg.mozilla.org/integration/autoland/rev/6972ade9ee51 Fix align-content's distributed alignment fallback for flex. r=dholbert
Status: ASSIGNED → RESOLVED
Closed: 26 days ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: