Bug 1878109 - Fix align-content's distributed alignment fallback for flex. r=dholbert

Similar to Bug 1836206 and per the CSS Align spec, 'space-between',
'space-around', and 'space-evenly' should use a "safe" fallback alignment when
overflow occurs.

This patch sets `alignContentFlags` to `StyleAlignFlags::SAFE` to fix the
fallback, and moves overflow-handling code to a later point so that it can catch
overflow more broadly.

Differential Revision: https://phabricator.services.mozilla.com/D235097